<resources>
    <string name="app_name">Hola personalizado</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hola </string>
    <string name="name">¿Cuál es su nombre?</string>
    <string name="saludo">Saludo:</string>
    <string name="saludoSr">Señor</string>
    <string name="saludoSra">Señora</string>
    <string name="showTime">Mostrar hora</string>
    <string name="ok">OK</string>
    <string name="noNameMsg">No se ha indicado nombre</string>
    <string name="title_activity_salutation">Salutation</string>
</resources>
